--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   path_provider: ^2.0.7
   io: ^1.0.3
   http: ^0.13.4
+  firebase_core: ^1.10.6
+  firebase_analytics: ^9.0.4
 
 dev_dependencies:
   flutter_test:
