--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   http: ^0.13.4
   firebase_core: ^1.10.6
   firebase_analytics: ^9.0.4
+  firebase_auth: ^3.3.4
+  google_sign_in: ^5.2.1
 
 dev_dependencies:
   flutter_test:
