--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_analytics: ^9.0.4
   firebase_auth: ^3.3.4
   google_sign_in: ^5.2.1
+  cloud_firestore: ^3.1.5
 
 dev_dependencies:
   flutter_test:
